se creo v-for con lista de 8 productos

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
 * {
     background-color: bisque;
 }
+
+.imagen {
+    width: 15%;
+}
+
+.caja {
+    border: solid 1px black;
+    padding: 5px;
+}
